Further updates and code cleanups
