# rest_api/serializers.py
@@ -159,7 +159,7 @@ class ScoreSerializer(serializers.ModelSerializer):
         meta_fields = ('id', 'name', 'ftp_scoring_file', 'publication', 'matches_publication',
                     'samples_variants', 'samples_training', 'trait_reported', 'trait_additional',
                     'trait_efo', 'method_name', 'method_params', 'variants_number',
-                    'variants_interactions', 'variants_genomebuild', 'license')
+                    'variants_interactions', 'variants_genomebuild', 'ancestries', 'license')
         fields = meta_fields
         read_only_fields = meta_fields
 
