# rest_api/static/rest_api/openapi/openapi-schema.yml
@@ -4,7 +4,7 @@ servers:
 info:
 
   title: PGS Catalog REST API
-  version: '1.6'
+  version: '1.7'
   description: |
     Programmatic access to the PGS Catalog metadata. More information about the metadata and its structure can be found [here](/docs/).
 
@@ -73,6 +73,10 @@ info:
 
     <a class="toggle_btn" id="changelog">REST API version changelog <i class="fas fa-plus-circle"></i></a>
     <div class="toggle_content" id="content_changelog" style="display:none">
+
+      * <span class="badge badge-pill badge-pgs">1.7</span> - April 2021:
+        * New data **ancestries** in the `/rest/score` endpoints, providing information about ancestry distribution."
+        * New endpoint `/rest/ancestry_categories` providing the list of ancestry symbols and names.
 
       * <span class="badge badge-pill badge-pgs">1.6</span> - March 2021:
         * New endpoint `/rest/info` with data such as the REST API version, latest release date and counts, PGS citation, ...
@@ -719,6 +723,76 @@ components:
           type: string
           description: "The version of the genome assembly that the variants present in the PGS are associated with. Listed as NR (Not Reported) if unknown."
           example: "GRCh38"
+        ancestries:
+          type: object
+          description: "Ancestry distribution on each PGS stage. For more information about Ancestry, please go to [Ancestry documentation](/docs/ancestry). To get the full name of the Ancestry categories (e.g. 'European' for 'EUR'), please look at the endpoint **/rest/ancestry_categories**"
+          properties:
+            gwas:
+              type: object
+              description: "Ancestry(ies) used in the Source of Variant Associations (GWAS) stage. Only available if there is ancestry data at this stage."
+              properties:
+                dist:
+                  type: object
+                  description: "Ancestry distribution. The endpoint **/rest/ancestry_categories** provides the mapping between the 3 letters symbol and the ancestry category name."
+                  additionalProperties:
+                    type: integer
+                  example:
+                    EUR: 100
+                count:
+                  type: integer
+                  description: "Total number of individuals from this stage."
+                  example: 187599
+                multi:
+                  type: array
+                  description: "Breakdown of the Multi-ancestry (MAO or MAE) distribution. Only available if there is a Multi-ancestry entry in the distribution."
+                  items:
+                    type: string
+                    example: ["MAE_EUR","MAE_EAS","MAE_AFR"]
+            dev:
+              type: object
+              description: "Ancestry(ies) used in the Score Development stage. Only available if there is ancestry data at this stage."
+              properties:
+                dist:
+                  type: object
+                  description: "Ancestry distribution. The endpoint **/rest/ancestry_categories** provides the mapping between the 3 letters symbol and the ancestry category name."
+                  additionalProperties:
+                    type: integer
+                  example:
+                    EUR: 88.7
+                    AFR: 7.9
+                    AMR: 3.4
+                count:
+                  type: integer
+                  description: "Total number of individuals from this stage."
+                  example: 120280
+                multi:
+                  type: array
+                  description: "Breakdown of the Multi-ancestry (MAO or MAE) distribution. Only available if there is a Multi-ancestry entry in the distribution."
+                  items:
+                    type: string
+                    example: ["MAE_EUR","MAE_AFR","MAE_GME"]
+            eval:
+              type: object
+              description: "Ancestry(ies) used in the PGS Evaluation stage. Only available if there is ancestry data at this stage."
+              properties:
+                dist:
+                  type: object
+                  description: "Ancestry distribution. The endpoint **/rest/ancestry_categories** provides the mapping between the 3 letters symbol and the ancestry category name."
+                  additionalProperties:
+                    type: integer
+                  example:
+                    EUR: 75
+                    AFR: 25
+                count:
+                  type: integer
+                  description: "Number of distinct Sample Sets."
+                  example: 40
+                multi:
+                  type: array
+                  description: "Breakdown of the Multi-ancestry (MAO or MAE) distribution. Only available if there is a Multi-ancestry entry in the distribution."
+                  items:
+                    type: string
+                    example: ["MAE_EUR","MAE_SAS"]
         license:
           type: string
           description: "The PGS Catalog distributes its data according to EBI’s standard Terms of Use. Some PGS have specific terms, licenses, or restrictions (e.g. non-commercial use) that we highlight in this field, if known."
@@ -1451,6 +1525,8 @@ paths:
           * The different samples used during the PGS, with ancestry information and cohort(s):
             * **samples_variants**: samples used to define the variant associations/effect-sizes used in the PGS. These data are extracted from the NHGRI-EBI GWAS Catalog when a study ID (GCST) is available.
             * **samples_training**: samples used to develop or train the score (e.g. not used for variant discovery, and non-overlapping with the samples used to evaluate the PGS predictive ability).
+          * The ancestry distribution
+          * The Terms/Licenses
 
         Example of request:
         ```
@@ -1497,6 +1573,8 @@ paths:
           * The different samples used during the PGS, with ancestry information and cohort(s):
             * **samples_variants**: samples used to define the variant associations/effect-sizes used in the PGS. These data are extracted from the NHGRI-EBI GWAS Catalog when a study ID (GCST) is available.
             * **samples_training**: samples used to develop or train the score (e.g. not used for variant discovery, and non-overlapping with the samples used to evaluate the PGS predictive ability).
+          * The ancestry distribution
+          * The Terms/Licenses
 
         Example of request:
         ```
@@ -1546,6 +1624,8 @@ paths:
           * The different samples used during the PGS, with ancestry information and cohort(s):
             * **samples_variants**: samples used to define the variant associations/effect-sizes used in the PGS. These data are extracted from the NHGRI-EBI GWAS Catalog when a study ID (GCST) is available.
             * **samples_training**: samples used to develop or train the score (e.g. not used for variant discovery, and non-overlapping with the samples used to evaluate the PGS predictive ability).
+          * The ancestry distribution
+          * The Terms/Licenses
       parameters:
         - in: query
           name: pmid
@@ -1967,6 +2047,42 @@ paths:
                     type: string
                     description: "URL to the terms of use"
                     example: 'https://www.ebi.ac.uk/about/terms-of-use'
+          description: ''
+        '4XX':
+          content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Error_4XX'
+          description: Client error (e.g. 400 - Bad request, 405 - Method not allowed)
+
+
+  # Other endpoints
+  '/rest/ancestry_categories':
+    get:
+      tags:
+        - "Other endpoints"
+      operationId: getAncestryCategories
+      description: |
+        Return the list of mappings between the ancestry symbols (e.g. EUR) and their name (e.g. European):
+
+        Example of request:
+        ```
+        https://www.pgscatalog.org/rest/ancestry_categories/
+        ```
+      parameters: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                description: "List of ancestry symbols and names"
+                additionalProperties:
+                  type: string
+                example:
+                  EUR: "European"
+                  AFR: "African"
+                  AMR: "Hispanic or Latin American"
           description: ''
         '4XX':
           content:
